cabal-version:      3.4
name:               paper-socket-server
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             kwonryul
maintainer:         pkr08205@gmail.com
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.0.0
    hs-source-dirs:   src
    default-language: GHC2021

executable paper-socket-server
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.19.0.0,
        paper-socket-server

    hs-source-dirs:   app
    default-language: GHC2021

test-suite paper-socket-server-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.0.0,
        paper-socket-server
